@@ -20,6 +20,7 @@
 
 
 #include <stdio.h>
+#include <string.h>
 #include <glib.h>
 #include <libgnomevfs/gnome-vfs.h>
 #include <libgnomevfs/gnome-vfs-mime-utils.h>
