@@ -1,3 +1,9 @@
+2002-09-17  Jens Askengren <jensus@linux.nu>
+
+	* taglist/XSLT.tags: new XSLT taglist
+
+	* taglist/Makefile.am: install XSLT.tags
+
 2002-09-13  Paolo Maggi  <maggi@athena.polito.it>
 
 	* spell/docinfo.c (MENU_ITEM_PATH): put the docinfo plugin in the 
